--- a/MiniFB-main/blog/templates/blog/home.html
+++ b/MiniFB-main/blog/templates/blog/home.html
@@ -5,20 +5,20 @@
         <div class="col-md-3">
             <div class="card">
                 <div class="card-body">
-                    <div class="h5">@ArnoldM</div>
-                    <div class="h7 text-muted">Fullname : Arnold A. Magalona</div>
-                    <div class="h7">Developer of web applications</div>
+                    <div class="h5">@Cezar John</div>
+                    <div class="h7 text-muted">Fullname : Cezar John Escandor</div>
+                    <div class="h7">Pro Dota Player</div>
                 </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">
                         <div class="h6 text-muted">Followers</div>
-                        <div class="h5">5</div>
+                        <div class="h5"1.2M></div>
                     </li>
                     <li class="list-group-item">
                         <div class="h6 text-muted">Following</div>
                         <div class="h5">5</div>
                     </li>
-                    <li class="list-group-item">DevZ</li>
+                    <li class="list-group-item">Mid Lane</li>
                 </ul>
             </div>
         </div>
